# easy_whisper

./: MANIFEST.in.txt  README.md  README.rst  pyproject.toml  setup.py
easy_whisper/: __init__.py  __main__.py  api_trans.py  cli_ui.py  sabs.py  sys_par.json  tk_ui.py  trans.py  ui_share.py  usr_par.json  wavlen.py
